# pvarray

./: mkdocs.yml  pyproject.toml
docs/: index.md
src/pvarray/: __main__.py
